--- a/index.html
+++ b/index.html
@@ -8,41 +8,32 @@
 <body>
   <div id="loadingbg">
     <div id="loadingwrap">
-      <div id="loading">loading</div>
+      <div id="loading">0%</div>
     </div>
   </div>
-  <script type="text/javascript">
-    $("#loading").animate({width:"40px"},function(){
-    	$(this).text("20%")
-    })
-  </script>
   <div id="content">
 	  <div id="wrap1">
 	    <img class="bg-img" src="img/bg1.jpg">
 	  </div>
-	  <script type="text/javascript">
-		$("#loading").animate({width:"80px"},function(){
-	    	$(this).text("40%")
-	    })
-	  </script>
 	  <div id="wrap2">
 	    <img class="bg-img" src="img/bg2.jpg">
 	  </div>
   <div>
-  <script type="text/javascript">
-    $("#loading").animate({width:"140px"},function(){
-    	$(this).text("70%")
-    })
-  </script>
 </body>
 </html>
 <script type="text/javascript">
-  $("#loading").animate({width:"200px"},function(){
-  	$(this).text("100%")
-  	$("#loadingbg").animate({opacity:"0"},function(){
-    	$(this).hide()
-    })
-  })
+	var loadNum = 0
+	$('.bg-img').load(function(){
+		loadNum+=50
+		$("#loading").stop().animate({width:loadNum*2+"px"},function(){
+			$(this).text(loadNum+"%")
+			if(loadNum==100){
+				$("#loadingbg").animate({opacity:"0"},function(){
+					$(this).hide()
+				})
+			}
+		})
+	})
   $(document).ready(function(){
     $("#wrap1").click(function(){
     	$(this).animate({width:"0"},200,function(){
